src/objects/Condition__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_Number__c</fullName>
        <label>Condition Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 Year Tax Return</fullName>
                </value>
                <value>
                    <fullName>Alternate Address Clarification</fullName>
                </value>
                <value>
                    <fullName>Bank statements</fullName>
                </value>
                <value>
                    <fullName>Client(s) to provide</fullName>
                </value>
                <value>
                    <fullName>Copy of Divorce Decree and/or Settlement Agreement</fullName>
                </value>
                <value>
                    <fullName>Copy of Each Client's Social Security Card</fullName>
                </value>
                <value>
                    <fullName>Credit Report Inquiries Requiring Explanation</fullName>
                </value>
                <value>
                    <fullName>Driver's License for all clients</fullName>
                </value>
                <value>
                    <fullName>Electric Bills (Occupancy Clarification)</fullName>
                </value>
                <value>
                    <fullName>Occupancy Status</fullName>
                </value>
                <value>
                    <fullName>Paystubs-30 days most recent</fullName>
                </value>
                <value>
                    <fullName>Pension Award Letter</fullName>
                </value>
                <value>
                    <fullName>Please provide a copy of your current mortgage statement</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
                <value>
                    <fullName>Proof of assets in the amount  needed for funds to close</fullName>
                </value>
                <value>
                    <fullName>Proof of Social Security Income</fullName>
                </value>
                <value>
                    <fullName>Self-Employed 2 years Tax Returns</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
                <value>
                    <fullName>Utility Bill (Occupancy Clarification)</fullName>
                </value>
                <value>
                    <fullName>W-2 Form</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Proof of assets in the amount needed for funds to close</fullName>
                    <isActive>false</isActive>
                    <label>Proof of assets in the amount needed for funds to close</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Condition</relationshipLabel>
        <relationshipName>Condition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                    <default>true</default>
                    <label>Outstanding</label>
                </value>
                <value>
                    <fullName>Revision Requested</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rvxId__c</fullName>
        <label>rvxId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UWID__c</fullName>
        <label>UWID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Created_Date__c</fullName>
        <description>Date from RV</description>
        <label>Condition Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>Status Date from RV(which is Last modified date from RV)</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Condition</label><nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Condition</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Conditions</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
</CustomObject>